--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ html, body {
   height: 100%;
   width: 100%;
   
+  
+}
+html{
+  
+ 
 }
 header{
   background-image: url('/Images/banner.jpg');
@@ -10,16 +15,27 @@ header{
   background-size: 75% 100%;
   background-repeat: no-repeat;
   background-position: center;
+  grid-area: header;
 }
 body{
 
+   display: grid;
+  grid-template-areas:
+    "header header header"
+    "sidebar main main"
+    "footer footer footer";
+  
 
+}
+main{
+  grid-area:main;
 }
 footer{
   display:flex;
   flex-direction:column;
   align-items: center;
   width: 100%;
+  grid-area: footer;
   
 }
 .info{
@@ -32,4 +48,50 @@ footer{
 .cont{
   font-style: underlined;
   
+}
+.maindiv{
+  display: flex;
+  flex-direction: column;
+}
+.on1{
+  float: left;
+  width: 50%;
+  background-color: #FFFF00;
+}
+.tw2{
+  float: right;width: 50%;
+  background-color: #dc143c;
+
+}
+.tr3{
+  float: left;width: 50%;
+  background-color: #00FF00 ;
+}
+nav{
+  grid-area:sidebar;
+}
+ol{
+  outline-color:yellow;
+  outline-style: dotted;
+  
+}
+ul{
+  outline-color:lightgreen;
+  outline-style: dotted;
+}
+p{
+  font-family:"Verdana","Arial"
+  
+}
+th{
+background-color: black;
+  color:white;
+  font-size: 1.5em;
+}
+table{
+  background-color: red;
+  color:darkblue;
+}
+td{
+ font-family: serif;
 }
