--- a/style.css
+++ b/style.css
@@ -7,28 +7,58 @@ html, body {
 html{
   
  
-}      
+} 
+.bakcolor{
+  background-image:  linear-gradient(
+      to right, 
+      red, 
+      #f06d06, 
+      rgb(255, 255, 0), 
+      green
+    );
+  /*background-color:  linear-gradient(
+      to right, 
+      red, 
+      #f06d06, 
+      rgb(255, 255, 0), 
+      green
+    );*/
+  background-size: 100%;
+  height: 100%;
+  opacity: 70%;
+}
 header{
-  background-image: url('/Images/banner.jpg');
-  height: 200px;
-  background-color:  #3D9970;
-  background-size: 75% 100%;
+  
+  background-image: url('Images/banner.jpg');
+  height: 100%;
+
+  background-size: 20% 100%;
   background-repeat: no-repeat;
   background-position: center;
   grid-area: header;
 }
+
 body{
 
    display: grid;
+  grid-template-columns: repeat(3,33.3%);
+  grid-template-rows: 25% 60% 15%; 
   grid-template-areas:
     "header header header"
-    "sidebar main main"
+    "nav main aside"
     "footer footer footer";
   
 
 }
 main{
   grid-area:main;
+  background: linear-gradient(
+      to right, 
+      red, 
+      #f06d06, 
+      rgb(255, 255, 0), 
+      green
+    );
 }
 footer{
   display:flex;
@@ -52,23 +82,49 @@ footer{
 .maindiv{
   display: flex;
   flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 100%;
+  
 }
 .on1{
   float: left;
-  width: 50%;
+  
   background-color: #FFFF00;
 }
 .tw2{
-  float: right;width: 50%;
+  float: right;
   background-color: #dc143c;
 
 }
 .tr3{
-  float: left;width: 50%;
+  float: left;
   background-color: #00FF00 ;
 }
 nav{
-  grid-area:sidebar;
+  grid-area:nav;
+  /*background-color: yellow;*/
+  display: flex;
+  flex-direction: column;
+  gap: 1%;
+  justify-content: center;
+  align-items: center;
+   background:linear-gradient(90deg, rgba(248, 255, 0, 1) 0%, rgba(255, 59, 0, 1) 100%); 
+}
+nav>a{
+  height: 10%;
+  width: 60%;
+  background: #ffc40c;
+  border: 1px solid black ;
+  color: red;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  font-size:100%;
+  text-decoration: none;
+  text-align: center;
+}
+a:hover{
+  width: 95%;
+  background: white;
 }
 ol{
   outline-color:yellow;
@@ -79,19 +135,154 @@ ul{
   outline-color:lightgreen;
   outline-style: dotted;
 }
-p{
-  font-family:"Verdana","Arial"
+p,main>h1, main>h3{
+  font-family:"Verdana","Arial";
+  
   
 }
+
+
 th{
 background-color: black;
   color:white;
   font-size: 1.5em;
 }
 table{
-  background-color: red;
-  color:darkblue;
+  background-color: beige;
+  color:black;
+  width: 100%;
+  height: 100%;
+  font-size: 100%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+ul{
+  
+  font-size: 100%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+ol{
+  
+  font-size: 100%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 td{
  font-family: serif;
+}
+#form221{
+  
+  background: linear-gradient(
+      to right, 
+      red, 
+      #f06d06, 
+      rgb(255, 255, 0), 
+      green
+    );
+  height: 100%;
+  display: flex;
+
+
+  
+}
+aside{
+  grid-area: aside;
+  background-color: green;
+  
+}
+footer{
+  background: linear-gradient(to bottom, red, yellow, green);
+}
+#kanvas{
+  border: 2px solid red;
+  width: 85%;
+  height: 85%;
+  
+}
+.asidemain{
+  
+
+  height: 100%;
+
+  background-size: 90% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+label {
+  width: 100%;
+  font-family:Arial, Helvetica, sans-serif;
+  font-size: 100%;
+  color: white;
+}
+.lbl,.input{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+.lbl{
+  gap: 4%;
+}
+.input{
+  gap: 3.5%;
+}
+.subBtn{
+  background: linear-gradient(to bottom, red, yellow, green);
+  border: 1px solid black;;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  height: 8%;
+  color: black;
+  font-weight: bolder;
+  
+  font-size: 100%;
+  width: 70%;
+  
+}
+aside{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+iframe{
+  
+  
+}
+
+@media only screen 
+and (min-width : 0px) 
+and (max-width : 720px) {
+
+  
+  body {
+    display: grid;
+  grid-template-columns: repeat(3,33.3%);
+  grid-template-rows: 25% 10% 25% 25% 15%; 
+  grid-template-areas:
+    "header header header"
+    "nav nav nav"
+    "main main main"
+    "aside aside aside"
+    "footer footer footer";
+    }
+
+
+
+  nav{
+    flex-direction: row;
+    
+  }
+  nav>a{
+    width: 30%;
+    height: 50%;
+  }
+  .lbl{
+    gap:1.5%;
+  }
+  .input{
+    gap: 0.5%;
+  }
+  .subBtn{
+    width: 30%;
+    height: 50%;
+  }
+  br{
+    visibility: hidden;
+  }
 }
